--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "file-type": "^20.4.1",
     "ioredis": "^5.6.0",
     "mongodb": "^6.15.0",
-    "nano": "^10.1.4",
+    "multer": "^1.4.5-lts.2",
     "openai": "^4.87.3",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
