--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@bull-board/api": "^6.7.10",
     "@bull-board/hono": "^6.7.10",
     "@hono/node-server": "^1.14.0",
+    "@types/qrcode-terminal": "^0.12.2",
     "bull": "^4.16.5",
     "dotenv": "^16.4.7",
     "file-type": "^20.4.1",
@@ -25,7 +26,7 @@
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.26.0"
+    "whatsapp-web.js": "^1.27.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.4",
