bull now handles delayed jobs correctly

--- a/pi-scripts/scanbd.conf
+++ b/pi-scripts/scanbd.conf
@@ -184,6 +184,16 @@ global {
 	      script = "scan_controller.sh"
 	}
 
+      action device-insert {
+            filter = "^insert.*"
+            numerical-trigger {
+                  from-value = 0
+                  to-value   = 1
+            }
+            desc = "Device inserted"
+            script = "scan_controller.sh"
+}
+
 }
 
 # include
