--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.14",
+    "bullmq": "^5.53.2",
     "esbuild": "^0.25.5",
     "tsx": "latest",
     "typescript": "^5.3.3"
