--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "ioredis": "^5.6.0",
     "mongodb": "^6.15.0",
     "openai": "^4.98.0",
+    "pdf-lib": "^1.17.1",
+    "pdf-to-img": "^4.5.0",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "qrcode-terminal": "^0.12.0",
+    "sharp": "^0.34.2",
     "whatsapp-web.js": "^1.27.0"
   },
   "devDependencies": {
