--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@bull-board/hono": "^6.7.10",
     "@hono/node-server": "^1.14.3",
     "@types/qrcode-terminal": "^0.12.2",
+    "axios": "^1.10.0",
     "bee-queue": "^1.7.1",
     "bull": "^4.16.5",
     "dotenv": "^16.4.7",
@@ -36,6 +37,7 @@
     "@types/node": "^22.13.14",
     "esbuild": "^0.25.5",
     "tsx": "latest",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^3.2.4"
   }
 }
