--- a/package.json
+++ b/package.json
@@ -3,25 +3,15 @@
   "type": "module",
   "version": "1.0.0",
   "description": "AI-powered store inventory assistant",
-  "main": "dist/index.mjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs"
-    }
-  },
   "scripts": {
-    "start": "npm run build && node dist/index.mjs",
-    "dev": "sh -c 'redis-cli ping > /dev/null 2>&1 || (echo \"Starting Redis...\" && redis-server --daemonize yes); tsx app/main.ts'",
+    "prestart": "npm run build",
+    "start": "node --env-file=.env dist/main.js",
+    "dev": "tsx watch --env-file=.env src/main.ts",
     "test": "vitest",
-    "build": "bunchee --format esm",
-    "dev:build": "bunchee --watch --format esm",
+    "build": "vite build",
     "typecheck": "tsc --noEmit"
   },
+  "keywords": [],
   "dependencies": {
     "@aws-sdk/client-s3": "^3.777.0",
     "@azure/ai-form-recognizer": "^5.0.0",
@@ -33,7 +23,6 @@
     "axios": "^1.10.0",
     "bee-queue": "^1.7.1",
     "bull": "^4.16.5",
-    "dotenv": "^16.4.7",
     "hono": "^4.7.5",
     "ioredis": "^5.6.0",
     "mongodb": "^6.15.0",
@@ -49,10 +38,13 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.14",
-    "bunchee": "^6.5.4",
+    "glob": "^11.0.3",
+    "rollup-plugin-node-externals": "^8.0.1",
     "rollup-plugin-string": "^3.0.0",
     "tsx": "latest",
     "typescript": "^5.3.3",
+    "vite": "^7.0.3",
+    "vite-string-plugin": "^1.4.5",
     "vitest": "^3.2.4"
   }
 }
