--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@bull-board/hono": "^6.7.10",
     "@hono/node-server": "^1.14.3",
     "@types/qrcode-terminal": "^0.12.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "axios": "^1.10.0",
     "bee-queue": "^1.7.1",
     "bull": "^4.16.5",
@@ -33,12 +35,13 @@
     "pino-pretty": "^13.0.0",
     "puppeteer-core": "18.2.1",
     "qrcode-terminal": "^0.12.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "sharp": "^0.34.2",
     "whatsapp-web.js": "^1.27.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.14",
-    "glob": "^11.0.3",
     "rollup-plugin-node-externals": "^8.0.1",
     "rollup-plugin-string": "^3.0.0",
     "tsx": "latest",
