spreadshit format for draft

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@azure/identity": "^4.8.0",
     "@bull-board/api": "^6.7.10",
     "@bull-board/hono": "^6.7.10",
+    "@elastic/elasticsearch": "~8.18.2",
     "@hono/node-server": "^1.14.3",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/react": "^19.1.8",
@@ -28,7 +29,9 @@
     "hono": "^4.7.5",
     "ioredis": "^5.6.0",
     "mongodb": "^6.15.0",
+    "nan": "^2.23.0",
     "openai": "^4.98.0",
+    "parse-markdown-table": "^0.0.6",
     "pdf-lib": "^1.17.1",
     "pdf-to-img": "^4.5.0",
     "pino": "^9.6.0",
@@ -37,10 +40,13 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sharp": "^0.34.2",
+    "tablemark": "^3.1.0",
     "whatsapp-web.js": "^1.27.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.13.14",
+    "dotenv": "^17.2.0",
     "rollup-plugin-node-externals": "^8.0.1",
     "rollup-plugin-string": "^3.0.0",
     "tsx": "latest",
