--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@bull-board/hono": "^6.7.10",
     "@elastic/elasticsearch": "~8.18.2",
     "@hono/node-server": "^1.14.3",
+    "@logtail/pino": "^0.5.5",
     "@types/diff": "^7.0.2",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/react": "^19.1.8",
@@ -37,7 +38,7 @@
     "parse-markdown-table": "^0.0.6",
     "pdf-lib": "^1.17.1",
     "pdf-to-img": "^4.5.0",
-    "pino": "^9.6.0",
+    "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
     "qrcode-terminal": "^0.12.0",
     "react": "^19.1.0",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@types/deep-diff": "^1.0.5",
     "@types/lodash": "^4.17.20",
+    "@types/newrelic": "^9.14.8",
     "@types/node": "^22.13.14",
     "dotenv": "^17.2.0",
     "rollup-plugin-node-externals": "^8.0.1",
