--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,17 +16,6 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      # New Step: Cache NPM dependencies
-      # This step stores the downloaded node modules in a cache. On subsequent
-      # runs, it restores this cache, making the 'npm ci' step much faster.
-      - name: Cache Node.js modules
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
-
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
@@ -55,8 +44,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          # New Option: Enable Docker build cache
-          # This tells the build action to use a cache for Docker layers.
-          # It stores the cache on the GitHub Actions registry.
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          # Build cache stored in the GitHub Container Registry so both the
+          # runner *and* the droplet can reuse layers.
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:cache
+          cache-to:   type=registry,ref=ghcr.io/${{ github.repository }}:cache,mode=max
