--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-dom": "^19.1.0",
     "sharp": "^0.34.2",
     "tablemark": "^3.1.0",
-    "whatsapp-web.js": "^1.27.0"
+    "whatsapp-web.js": "^1.27.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/deep-diff": "^1.0.5",
