refactor: concurrent processing per user and more

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-dom": "^19.1.0",
     "sharp": "^0.34.2",
     "tablemark": "^3.1.0",
-    "whatsapp-web.js": "^1.27.0",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main",
     "zod": "^3.25.76"
   },
   "devDependencies": {
