chore: Finalize documentation and project structure
This commit includes several cleanup and documentation tasks to finalize the manual sync feature.

- Renames the `chrome-ext` directory to `chrome-extention` for clarity.
- Updates `docs/design-gemini.md` to accurately reflect the final production architecture, including the manual sync workflow and deployment details.
- Adds a `hagar-extension-privacy.html` page to the `teivah-website` to support the Chrome Web Store submission.
- Adds new icons for the extension.

--- a/chrome-extention/manifest.json
+++ b/chrome-extention/manifest.json
@@ -10,9 +10,13 @@
    "host_permissions": [
       "https://retailer-il.rexail.com/*",
       "https://il.rexail.com/*",
+      "https://api.hagar.teivah.solutions/*",
       "http://138.197.187.213/*",
       "https://*.ngrok-free.app/*"
    ],
+   "background": {
+      "service_worker": "background.js"
+   },
    "action": {
       "default_popup": "popup.html",
       "default_icon": {
