feat: implement manual inventory update via Excel export
- Implement `excel-export` processor to handle manual inventory update flows
- Add Rexail-specific Excel export logic in `src/systems/rexail/export.ts`
- Introduce `finalize-excel-export` tool for AI handoff to user
- Add `exceljs` dependency for spreadsheet generation
- Register new queues and processors in `src/queues-init.ts` and `src/processors/index.ts`
- Update `design-gemini.md` to document Flow 10 (Excel Export & Reporting)
- Add inventory utility functions in `src/utils/inventory.ts`
- Add privacy policy and terms of service pages to teivah-website

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bull": "^4.16.5",
     "console-table-printer": "^2.14.6",
     "deep-diff": "^1.0.2",
+    "exceljs": "^4.4.0",
     "hono": "^4.7.5",
     "ioredis": "^5.6.0",
     "mongodb": "^6.15.0",
